--- a/chat_bot/chatbot/templates/home.html
+++ b/chat_bot/chatbot/templates/home.html
@@ -127,7 +127,7 @@
 
         $.ajax({
           type: 'POST',
-          url: '',  // Укажите URL, по которому будет отправляться запрос на сервер
+          url: '',
           data: {
             'message': userInput,
             'csrfmiddlewaretoken': '{{ csrf_token }}'
